[gd_scene load_steps=2 format=3 uid="uid://c4r1ct3qnnx6y"]

[ext_resource type="Script" uid="uid://d2k4jdo0plvlr" path="res://Scenes/DebugMenu.gd" id="1_842g3"]

[node name="DebugMenu" type="CanvasLayer"]
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)
script = ExtResource("1_842g3")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 250.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Point"

[node name="PointSpin" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 23.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player"

[node name="PlayerOpt" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
item_count = 2
popup/item_0/text = "White"
popup/item_0/id = 0
popup/item_1/text = "Black"
popup/item_1/id = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "+1"

[node name="SubBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "-1"

[node name="ClearBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Clear"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Force Dice"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Die1Spin" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
min_value = 1.0
max_value = 6.0
value = 1.0

[node name="Die2Spin" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
min_value = 1.0
max_value = 6.0
value = 1.0

[node name="ForceDiceBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Force"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RollBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Roll Random"
